{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 42,
  "lineage": "238a8d4e-cb4c-173b-cf37-9405a970f885",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-11-22T06:06:33.757-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bubbly-bastion-478912-e3/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/networks/spark-vpc",
            "params": [],
            "priority": 1000,
            "project": "bubbly-bastion-478912-e3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_spark_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "4040"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-22T06:06:33.825-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bubbly-bastion-478912-e3/global/firewalls/allow-spark-ui",
            "log_config": [],
            "name": "allow-spark-ui",
            "network": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/networks/spark-vpc",
            "params": [],
            "priority": 1000,
            "project": "bubbly-bastion-478912-e3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/firewalls/allow-spark-ui",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-22T06:06:33.832-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bubbly-bastion-478912-e3/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/networks/spark-vpc",
            "params": [],
            "priority": 1000,
            "project": "bubbly-bastion-478912-e3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/disks/spark-edge"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-22T06:07:09.812-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/instances/spark-edge",
            "instance_id": "4582594919520828772",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7t4wiMmRafqQHiS62cB2/Ggr4vD/GQhA7kHTT4JpWaU9G/OeQqedHSRYTJ6/vyyyOYm1w/U47/RJ+MzT9ge3Zrx7cDoEycnvDtwkC7Y9WYrIUT/Anx0WgG+pfqO8GA/Nh8rZA/MmdQLvyCXJW0mf1CP5wufejBZgqhHXZH7qLAlDBw1UqoskDIKcJKD9HSl4OzUD8z8VPT5lt04dgfUr0nyLpo0ii90UlmOwd9QnKLebPKiMmwUlEIRegEPD0G6JMlONXs7LyY/aXVKq2XeGBtEki9Cn+iPquXlP4P0z4jesPXXx6qILwtt/siwhauEdc2HxkBobBB650ee6vRNhHsVmi8AxR1Ktfv8RZ9fCwTc686DEjgWwQM4K0i9aRE0L+dn6cYlEmjYYzL7WRowND1pdhnNiNVLoosYdNRba+QG [...]
            },
            "metadata_fingerprint": "cxj6mAcAKyk=",
            "name": "spark-edge",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.143.185.73",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/networks/spark-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "bubbly-bastion-478912-e3"
              }
            ],
            "project": "bubbly-bastion-478912-e3",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/instances/spark-edge",
            "service_account": [
              {
                "email": "122295964596-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/disks/spark-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-22T06:07:11.156-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/instances/spark-master",
            "instance_id": "562047841569897827",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7t4wiMmRafqQHiS62cB2/Ggr4vD/GQhA7kHTT4JpWaU9G/OeQqedHSRYTJ6/vyyyOYm1w/U47/RJ+MzT9ge3Zrx7cDoEycnvDtwkC7Y9WYrIUT/Anx0WgG+pfqO8GA/Nh8rZA/MmdQLvyCXJW0mf1CP5wufejBZgqhHXZH7qLAlDBw1UqoskDIKcJKD9HSl4OzUD8z8VPT5lt04dgfUr0nyLpo0ii90UlmOwd9QnKLebPKiMmwUlEIRegEPD0G6JMlONXs7LyY/aXVKq2XeGBtEki9Cn+iPquXlP4P0z4jesPXXx6qILwtt/siwhauEdc2HxkBobBB650ee6vRNhHsVmi8AxR1Ktfv8RZ9fCwTc686DEjgWwQM4K0i9aRE0L+dn6cYlEmjYYzL7WRowND1pdhnNiNVLoosYdNRba+QG [...]
            },
            "metadata_fingerprint": "cxj6mAcAKyk=",
            "name": "spark-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.177.105.197",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/networks/spark-vpc",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "bubbly-bastion-478912-e3"
              }
            ],
            "project": "bubbly-bastion-478912-e3",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/instances/spark-master",
            "service_account": [
              {
                "email": "122295964596-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_worker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/disks/spark-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-22T06:07:10.957-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/instances/spark-worker-1",
            "instance_id": "5210017202548014435",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7t4wiMmRafqQHiS62cB2/Ggr4vD/GQhA7kHTT4JpWaU9G/OeQqedHSRYTJ6/vyyyOYm1w/U47/RJ+MzT9ge3Zrx7cDoEycnvDtwkC7Y9WYrIUT/Anx0WgG+pfqO8GA/Nh8rZA/MmdQLvyCXJW0mf1CP5wufejBZgqhHXZH7qLAlDBw1UqoskDIKcJKD9HSl4OzUD8z8VPT5lt04dgfUr0nyLpo0ii90UlmOwd9QnKLebPKiMmwUlEIRegEPD0G6JMlONXs7LyY/aXVKq2XeGBtEki9Cn+iPquXlP4P0z4jesPXXx6qILwtt/siwhauEdc2HxkBobBB650ee6vRNhHsVmi8AxR1Ktfv8RZ9fCwTc686DEjgWwQM4K0i9aRE0L+dn6cYlEmjYYzL7WRowND1pdhnNiNVLoosYdNRba+QG [...]
            },
            "metadata_fingerprint": "cxj6mAcAKyk=",
            "name": "spark-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.177.108.1",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/networks/spark-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "bubbly-bastion-478912-e3"
              }
            ],
            "project": "bubbly-bastion-478912-e3",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/instances/spark-worker-1",
            "service_account": [
              {
                "email": "122295964596-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_worker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/disks/spark-worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-22T06:07:11.187-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/instances/spark-worker-2",
            "instance_id": "608073033236381027",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7t4wiMmRafqQHiS62cB2/Ggr4vD/GQhA7kHTT4JpWaU9G/OeQqedHSRYTJ6/vyyyOYm1w/U47/RJ+MzT9ge3Zrx7cDoEycnvDtwkC7Y9WYrIUT/Anx0WgG+pfqO8GA/Nh8rZA/MmdQLvyCXJW0mf1CP5wufejBZgqhHXZH7qLAlDBw1UqoskDIKcJKD9HSl4OzUD8z8VPT5lt04dgfUr0nyLpo0ii90UlmOwd9QnKLebPKiMmwUlEIRegEPD0G6JMlONXs7LyY/aXVKq2XeGBtEki9Cn+iPquXlP4P0z4jesPXXx6qILwtt/siwhauEdc2HxkBobBB650ee6vRNhHsVmi8AxR1Ktfv8RZ9fCwTc686DEjgWwQM4K0i9aRE0L+dn6cYlEmjYYzL7WRowND1pdhnNiNVLoosYdNRba+QG [...]
            },
            "metadata_fingerprint": "cxj6mAcAKyk=",
            "name": "spark-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.143.140.203",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/networks/spark-vpc",
                "network_ip": "10.0.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "bubbly-bastion-478912-e3"
              }
            ],
            "project": "bubbly-bastion-478912-e3",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/zones/asia-southeast1-a/instances/spark-worker-2",
            "service_account": [
              {
                "email": "122295964596-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "spark_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/bubbly-bastion-478912-e3/global/networks/spark-vpc",
            "mtu": 0,
            "name": "spark-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5369935319062576571",
            "numeric_id": "5369935319062576571",
            "project": "bubbly-bastion-478912-e3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/networks/spark-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "spark_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-22T06:06:34.980-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/bubbly-bastion-478912-e3/regions/asia-southeast1/subnetworks/spark-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "spark-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/global/networks/spark-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "bubbly-bastion-478912-e3",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bubbly-bastion-478912-e3/regions/asia-southeast1/subnetworks/spark-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7310974019586260357
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    }
  ]
}